--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             <img src="https://github.com/nanopi8788/cutenanopi/blob/main/%E3%82%8C%E3%83%BC%E3%81%99.png?raw=true">
         </div>
 
+        <div class="main">
+
+        </div>
+
+
         <div class="footer">
 
         </div>
