--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
         <div class="main">
 
         </div>
-
+    
+        <div class="contact-form">
+            <form action="https://api.staticforms.xyz/submit" method="post">
+              <p>おなまえ</p>
+                <input type="text" name="name" placeholder="なまえ">
+              <p>たいとる</p>
+                <input type="text" name="email" placeholder="たいとる" />
+              <p>おたより</p>
+                <textarea name="message"></textarea>
+            
+                <input type="text" name="honeypot" style="display:none">
+                <input type="hidden" name="accessKey" value="f80e443f-aa31-4405-8887-e4d5fa83a73c">
+                <input type="hidden" name="subject" value="ラジオのお便り" />
+                <input type="hidden" name="replyTo" value="k22AA020@st.kyusan-u.ac.jp">
+                <input type="hidden" name="redirectTo" value="https://nanopi8788.github.io/nanopi/thanks.html">
+                <input type="submit" value="おくる" />
+            </form>
+ 
 
         <div class="footer">
 
