--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
                 <input type="hidden" name="accessKey" value="f80e443f-aa31-4405-8887-e4d5fa83a73c">
                 <input type="hidden" name="subject" value="お便り" />
                 <input type="hidden" name="replyTo" value="k22AA020@st.kyusan-u.ac.jp">
-                <input type="hidden" name="redirectTo" value="https://nanopi8788.github.io/nanopi/thanks.html">
+                <input type="hidden" name="redirectTo" value="https://github.com/nanopi8788/messages/blob/main/thanks.html">
                 <input type="submit" value="おくる" />
             </form>
- 
 
         <div class="footer">
 
