--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input type="hidden" name="accessKey" value="f80e443f-aa31-4405-8887-e4d5fa83a73c">
                 <input type="hidden" name="subject" value="お便り" />
                 <input type="hidden" name="replyTo" value="k22AA020@st.kyusan-u.ac.jp">
-                <input type="hidden" name="redirectTo" value="https://raw.githubusercontent.com/nanopi8788/messages/12e2d76e5898adc1f44beeb4d609e876a7701c3d/無題239_20250318003817.png?raw=true">
+                <input type="hidden" name="redirectTo" value="https://github.com/nanopi8788/messages/blob/main/dekitayo.png?raw=true">
                 <input type="submit" value="おくる" />
             </form>
 
